# Personal-Library-Manager

./: .gitignore  CLAUDE.md  README.md  add_document.py  doc_relation_table.csv  pyproject.toml  rebuild_knowledgbase.py  requirements.txt  retrieve_document.py
.claude/: settings.json
.claude/projects/-mnt-e-PersonalLibrary/memory/: MEMORY.md  feedback_main_block.md
RAG/: __init__.py  chunking.py  config.py  embedder.py  index.py  query.py  retriever.py  synthesizer.py
doc_raw/: Anthropic_Harness_Design.md
doc_summary/: Anthropic_Harness_Design.md
quick_start/: add_document.py  cli.py  gui.py  rebuild_knowledgbase.py  rebuild_knowledge_base.py  retrieve_document.py
quick_start/gui_utils/: documents.py  streaming.py
tests/: conftest.py
tests/RAG/: test_chunking.py  test_embedder.py  test_index.py  test_query.py  test_retriever.py  test_synthesizer.py
tests/utils/: test_fetch_document.py  test_generate_summary.py  test_update_relation_table.py
utils/: fetch_document.py  fetch_html.py  file_naming.py  generate_summary.py  llm_client.py  update_relation_table.py
